# portman

./: .env.example  .gitignore  README.md  correlation.ipynb  dev.js  index.html  premium.ipynb  pyproject.toml  restart.sh  slot.py
backend/: call_recorder.py  crypto.py  main.py  position.py  shared.py  stock.py  valuation.py  yahoo.py
frontend/: main.py
patch/: HOOD.json  PLTR.json
portman/: crypto.py  main.py  position.py  shared.py  stock.py  yahoo.py
src/: TW50.py  crypto.py  main.py  position.py  ranking.py  shared.py  stock.py
tests/: test_call_recorder.py  test_call_tree_lines.py  test_main.py  test_stock.py  test_valuation_finmind.py  test_valuation_sec.py  test_valuation_tiingo.py
