[tool.poetry]
name = "portman"
version = "0.1.0"
description = ""
authors = ["sieginglion <sieginglion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.3.0"
fastapi = "^0.104.1"
general-cache = "^0.1.1"
httpx = "^0.25.1"
numba = "^0.59.0"
numpy = "^1.26.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
uvicorn = "^0.24.0.post1"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.1"
notebook = "^7.0.6"
plotly = "^5.18.0"
streamlit = "^1.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
