[tool.poetry]
name = "portman"
version = "0.1.0"
description = ""
authors = ["sieginglion <sieginglion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arrow = "^1.4.0"
fastapi = "^0.127.1"
general-cache = "^0.1.1"
httpx = "^0.28.1"
numba = "^0.63.1"
python-dotenv = "^1.2.1"
uvicorn = "^0.40.0"
pandas = {extras = ["xml"], version = "^2.3.3"}

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.8"
notebook = "^7.5.1"
plotly = "^6.5.0"
streamlit = "^1.52.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
